<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/size_1">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/size_1"
        tools:context=".ui.fish.EditFishActivity">

        <ProgressBar
            android:id="@+id/progress_fish"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/title"
            style="@style/size_2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/ikan_cupang"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpt_layout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:hint="@string/jenis_ikan"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jenis_fish"
                style="@style/size_3"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpt_layout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inpt_layout1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:hint="@string/harga"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_fish"
                style="@style/size_3"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpt_layout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inpt_layout2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:hint="@string/penjual"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/seller_fish"
                style="@style/size_3"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inpt_layout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inpt_layout3"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/img_selectedDate"
            android:hint="@string/tanggal"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/purchaeDate"
                style="@style/size_3"
                android:enabled="false"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/img_selectedDate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/inpt_layout3"
            android:layout_alignParentEnd="true"
            style="@style/size_icon"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon_date" />

        <TextView
            android:id="@+id/txt_imgfish"
            style="@style/size_2"
            android:layout_below="@+id/inpt_layout4"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/gambar_ikan_cupang"
            android:textSize="16sp" />

        <ImageView
            android:id="@id/img_fish"
            android:layout_width="512px"
            android:layout_height="250px"
            android:layout_below="@+id/txt_imgfish"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/icon_image" />

        <ImageView
            android:id="@+id/image_searchfish"
            android:layout_below="@+id/txt_imgfish"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_searchimage"
            style="@style/size_icon" />


        <Button
            android:id="@+id/btn_updatefish"
            android:layout_below="@+id/img_fish"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            style="@style/size_3"/>

    </RelativeLayout>

</ScrollView>